--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,12 @@
       <version>2.3.5</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.3.5</version>
+    </dependency>
 
 
     <!-- https://mvnrepository.com/artifact/javax.mail/mail -->
